--- a/movies.yml
+++ b/movies.yml
@@ -1,3 +1,14 @@
+interestelar:
+  titulo: Interestelar
+  poster: posters/interestelar.jpg
+  imdb: https://www.imdb.com/pt/title/tt0816692
+  avaliacao: 8.7
+  tipo: Aventura
+  ano: 2014
+  duracao: 2 h 49 min
+  certificacao-idade: 10
+  streaming: Netflix
+
 togo:
   titulo: Togo
   poster: posters/togo.jpg
@@ -9,17 +20,6 @@ togo:
   certificacao-idade: 10
   streaming: Disney+
 
-eu-sei-o-que-voces-fizeram-no-verao-passado:
-  titulo: "Eu Sei o Que Vocês Fizeram no Verão Passado"
-  poster: posters/eu-sei-o-que-voces-fizeram-no-verao-passado.jpg
-  imdb: https://www.imdb.com/pt/title/tt0119345
-  avaliacao: 5.8
-  tipo: Terror
-  ano: 1997
-  duracao: 1 h 41 min
-  certificacao-idade: 16
-  streaming: Netflix
-
 a-baleia:
   titulo: "A Baleia"
   poster: posters/a-baleia.jpg
@@ -29,17 +29,6 @@ a-baleia:
   ano: 2022
   duracao: 1 h 57 min
   certificacao-idade: 16
-  streaming: Netflix
-
-kpop-demon-hunters:
-  titulo: "K-Pop Demon Hunters"
-  poster: posters/kpop-demon-hunters.jpg
-  imdb: https://www.imdb.com/pt/title/tt14205554
-  avaliacao: 7.7
-  tipo: Animacao
-  ano: 2025
-  duracao: 1 h 35 min
-  certificacao-idade: 10
   streaming: Netflix
 
 mufasa:
@@ -53,6 +42,17 @@ mufasa:
   certificacao-idade: 10
   streaming: Disney+
 
+kpop-demon-hunters:
+  titulo: "K-Pop Demon Hunters"
+  poster: posters/kpop-demon-hunters.jpg
+  imdb: https://www.imdb.com/pt/title/tt14205554
+  avaliacao: 7.7
+  tipo: Animacao
+  ano: 2025
+  duracao: 1 h 35 min
+  certificacao-idade: 10
+  streaming: Netflix
+
 
 500-dias:
   titulo: "(500) Dias com Ela"
@@ -64,3 +64,14 @@ mufasa:
   duracao: 1 h 35 min
   certificacao-idade: 12
   streaming: Disney+
+  
+eu-sei-o-que-voces-fizeram-no-verao-passado:
+  titulo: "Eu Sei o Que Vocês Fizeram no Verão Passado"
+  poster: posters/eu-sei-o-que-voces-fizeram-no-verao-passado.jpg
+  imdb: https://www.imdb.com/pt/title/tt0119345
+  avaliacao: 5.8
+  tipo: Terror
+  ano: 1997
+  duracao: 1 h 41 min
+  certificacao-idade: 16
+  streaming: Netflix
